--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         </h1>
         <p class="subtitle">
           Preencha rapidinho esse formulário. No final, o site gera um texto prontinho pra você
-          <strong>copiar e mandar pra sua coach</strong>.
+          <strong>copiar e mandar pra seu coach</strong>.
         </p>
       </header>
 
@@ -980,7 +980,7 @@ Ceia: ..."></textarea>
             <div class="output-footer">
               <div class="btn-row">
                 <button type="submit" class="btn-primary">
-                  <span>✨ Gerar texto</span>
+                  <span>✅ Gerar texto</span>
                 </button>
                 <button type="button" class="btn-ghost" id="copyBtn">
                   📋 Copiar
